[package]
name = "solana-balance-watcher"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "solana-balance-watcher"
path = "./src/bin/cli.rs"

[dependencies]
axum = "0.6.18"
anyhow = "1.0.40"
chrono = "0.4"
futures = "0.3.30"
clap = { version = "4", features = ["derive", "env"] }
log = "0.4.14"
prometheus = "0.13.3"
solana-client = "=1.17.22"
solana-sdk = "=1.17.22"
solana-account-decoder = "=1.17.22"
tokio = { version = "1", features = ["full"] }
tracing = "0.1.37"
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3" }
once_cell = "1.19.0"
